# cleaned_project

./: .env.txt  .gitignore  app.py  clients.csc.txt  clients.csv  email_sms.py  logs.txt  progress_analyzer.py  pyproject.toml  render.yaml  requirements.txt  safety_detector.py
dashboard/templates/admin/: manage_users.html
