
[tool.poetry]
name = "construction-site-monitoring"
version = "0.1.0"
description = "AI-based Construction Site Monitoring System"
authors = ["Akkely Vikas Reddy <reddyvikas73@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3"
opencv-python = "^4.9"
twilio = "^9.0"
numpy = "^1.26"
Pillow = "^10.0"
gunicorn = "^21.2"
ultralytics = "^8.0"  # for YOLOv8

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
